--- a/src/com/esprit/controller/Lesdemandes.fxml
+++ b/src/com/esprit/controller/Lesdemandes.fxml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controller.LesdemandesController">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controller.LesdemandesController">
    <children>
       <Text layoutX="17.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les Demandes" wrappingWidth="255.0498046875">
          <font>
             <Font size="19.0" />
          </font>
       </Text>
-      <TableView layoutY="62.0" prefHeight="283.0" prefWidth="598.0">
+      <TableView layoutY="62.0" prefHeight="359.0" prefWidth="598.0">
         <columns>
-          <TableColumn prefWidth="99.0" text="Sujet" />
-          <TableColumn prefWidth="203.0" text="Etat" />
-            <TableColumn prefWidth="290.0" text="Patisserie" />
+          <TableColumn prefWidth="99.0" style="-fx-background-color: pink;" text="Sujet" />
+          <TableColumn prefWidth="203.0" style="-fx-background-color: pink;" text="Etat" />
+            <TableColumn prefWidth="295.0" style="-fx-background-color: pink;" text="Patisserie" />
         </columns>
       </TableView>
       <Separator layoutY="50.0" prefHeight="2.0" prefWidth="598.0" />
-      <Button layoutX="78.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #79cc83;" text="Confirmer" textFill="WHITE" />
-      <Button layoutX="405.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #ff4040;" text="Annuler" textFill="WHITE" />
+      <Button layoutX="78.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #79cc83;" text="Confirmer" textFill="WHITE" />
+      <Button layoutX="411.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #ff4040;" text="Annuler" textFill="WHITE" />
    </children>
 </AnchorPane>
