--- a/src/com/esprit/controller/afficheappel.fxml
+++ b/src/com/esprit/controller/afficheappel.fxml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="433.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controller.AfficheappelController">
+<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="501.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controller.AfficheappelController">
    <children>
       <Text layoutX="14.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffb8b8;" text="Mes Appels d'offre" wrappingWidth="291.529296875">
          <font>
             <Font size="19.0" />
          </font></Text>
-      <TableView fx:id="table" layoutX="6.0" layoutY="56.0" prefHeight="334.0" prefWidth="585.0" style="-fx-background-color: #ffdfdf;">
+      <TableView fx:id="table" layoutY="56.0" prefHeight="377.0" prefWidth="635.0" style="-fx-background-color: #ffdfdf;">
         <columns>
-          <TableColumn fx:id="sujet" prefWidth="160.0" text="Sujet" />
-          <TableColumn fx:id="datemax" prefWidth="179.0" text="DateMax" />
-            <TableColumn fx:id="description" prefWidth="244.0" text="Description" />
+          <TableColumn fx:id="sujet" prefWidth="160.0" style="-fx-background-color: pink;" text="Sujet" />
+          <TableColumn fx:id="datemax" prefWidth="179.0" style="-fx-background-color: pink;" text="DateMax" />
+            <TableColumn fx:id="description" prefWidth="295.0" style="-fx-background-color: pink;" text="Description" />
         </columns>
       </TableView>
-      <Button layoutX="97.0" layoutY="394.0" mnemonicParsing="false" onAction="#modifier" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #b0b5f1;" text="Modifier" textFill="WHITE" />
-      <Button layoutX="405.0" layoutY="394.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ea4343;" text="Supprimer" textFill="WHITE" />
+      <Button layoutX="115.0" layoutY="451.0" mnemonicParsing="false" onAction="#modifier" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #b0b5f1;" text="Modifier" textFill="WHITE" />
+      <Button layoutX="406.0" layoutY="451.0" mnemonicParsing="false" onAction="#delete" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ea4343;" text="Supprimer" textFill="WHITE" />
+      <Separator layoutX="-3.0" layoutY="46.0" prefHeight="1.0" prefWidth="642.0" />
    </children>
 </AnchorPane>
