--- a/src/com/esprit/controller/sms.fxml
+++ b/src/com/esprit/controller/sms.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -16,12 +17,12 @@
          </image></ImageView>
       <TextField fx:id="cle" layoutX="195.0" layoutY="53.0" prefHeight="25.0" prefWidth="193.0" promptText="                     Clé" />
       <TextField fx:id="env" layoutX="195.0" layoutY="97.0" prefHeight="25.0" prefWidth="193.0" promptText="             Envoyé par" />
-      <TextField fx:id="num" layoutX="195.0" layoutY="145.0" prefHeight="25.0" prefWidth="193.0" promptText="                Numero" />
       <TextArea fx:id="msg" layoutX="192.0" layoutY="206.0" prefHeight="127.0" prefWidth="200.0" promptText="                    Message" />
       <Button layoutX="234.0" layoutY="342.0" mnemonicParsing="false" onAction="#envoyer" prefHeight="25.0" prefWidth="115.0" style="-fx-background-color: pink;" text="Envoyer" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
+      <ComboBox fx:id="num" layoutX="195.0" layoutY="153.0" onMouseClicked="#afficherComboBox" prefHeight="28.0" prefWidth="200.0" promptText="                   Numéro" />
    </children>
 </AnchorPane>
