--- a/src/com/esprit/controller/Lesdemandes.fxml
+++ b/src/com/esprit/controller/Lesdemandes.fxml
@@ -15,15 +15,15 @@
             <Font size="19.0" />
          </font>
       </Text>
-      <TableView layoutY="62.0" prefHeight="359.0" prefWidth="598.0">
+      <TableView fx:id="table1" layoutY="62.0" prefHeight="359.0" prefWidth="598.0">
         <columns>
-          <TableColumn prefWidth="99.0" style="-fx-background-color: pink;" text="Sujet" />
-          <TableColumn prefWidth="203.0" style="-fx-background-color: pink;" text="Etat" />
-            <TableColumn prefWidth="295.0" style="-fx-background-color: pink;" text="Patisserie" />
+          <TableColumn fx:id="suu" prefWidth="99.0" style="-fx-background-color: pink;" text="Sujet" />
+          <TableColumn fx:id="etat" prefWidth="203.0" style="-fx-background-color: pink;" text="Etat" />
+            <TableColumn fx:id="pati" prefWidth="295.0" style="-fx-background-color: pink;" text="Patisserie" />
         </columns>
       </TableView>
       <Separator layoutY="50.0" prefHeight="2.0" prefWidth="598.0" />
-      <Button layoutX="78.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #79cc83;" text="Confirmer" textFill="WHITE" />
-      <Button layoutX="411.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #ff4040;" text="Annuler" textFill="WHITE" />
+      <Button fx:id="confirmer" layoutX="78.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #79cc83;" text="Confirmer" textFill="WHITE" />
+      <Button fx:id="annuler" layoutX="411.0" layoutY="430.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" style="-fx-background-color: #ff4040;" text="Annuler" textFill="WHITE" />
    </children>
 </AnchorPane>
