--- a/src/com/esprit/controller/AppelOffreModif.fxml
+++ b/src/com/esprit/controller/AppelOffreModif.fxml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="531.0" prefWidth="615.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" opacity="0.41" prefHeight="563.0" prefWidth="687.0" style="-fx-background-color: pink;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="sujet" layoutX="163.0" layoutY="88.0" prefHeight="25.0" prefWidth="268.0" promptText="Sujet" />
-      <DatePicker fx:id="date" layoutX="167.0" layoutY="132.0" prefHeight="25.0" prefWidth="268.0" />
-      <TextField fx:id="description" layoutX="167.0" layoutY="173.0" prefHeight="93.0" prefWidth="268.0" promptText="Description..." />
-      <Button fx:id="bt" layoutX="227.0" layoutY="293.0" mnemonicParsing="false" onAction="#modifer" text="valider votremodification" />
-      <Text layoutX="67.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sujet :" />
-      <Text layoutX="67.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Max" />
-      <Text layoutX="67.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+      <TextField fx:id="sujet" layoutX="188.0" layoutY="124.0" prefHeight="25.0" prefWidth="268.0" promptText="Sujet" />
+      <DatePicker fx:id="date" layoutX="188.0" layoutY="191.0" prefHeight="25.0" prefWidth="268.0" promptText="DateMax" />
+      <TextField fx:id="description" layoutX="188.0" layoutY="265.0" prefHeight="93.0" prefWidth="268.0" promptText="Description..." />
+      <Button fx:id="bt" layoutX="232.0" layoutY="382.0" mnemonicParsing="false" onAction="#modifer" prefHeight="41.0" prefWidth="180.0" style="-fx-background-color: pink;" text="Valider La Modification" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Button>
    </children>
    <stylesheets>
       <URL value="@exercice.css" />
